Fix overflow body regist/login, add floating button to all dashboard

--- a/src/public/css/pages/register.css
+++ b/src/public/css/pages/register.css
@@ -5,6 +5,7 @@ html {
 }
 
 body {
+    overflow-x: hidden;
 	justify-content: center;
 	align-items: center;
 	min-height: 100vh;
